Now with authentication and role acquisition using the REST API

--- a/src/Wellcome.Dds/Wellcome.Dds.Server/Views/RoleProvider/OpenedLoginWindow.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Server/Views/RoleProvider/OpenedLoginWindow.cshtml
@@ -10,11 +10,11 @@
     <title>Wellcome Library | Restricted Digital Content</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <script>document.getElementsByTagName('html')[0].className += ' has-js';</script>
-    <link rel="stylesheet" href="/dds-static/login/assets/sso-core.min.css">
-    <link rel="stylesheet" media="all and (min-width: 50em)" href="/dds-static/login/assets/sso-layout.min.css">
+    <link rel="stylesheet" href="/roleproviderlogin/assets/sso-core.min.css">
+    <link rel="stylesheet" media="all and (min-width: 50em)" href="/roleproviderlogin/assets/sso-layout.min.css">
     <!--[if (lt IE 9)&(!IEMobile)]><link rel="stylesheet" media="screen" href="/cas/css/sso-layout.min.css" /><![endif]-->
-    <link rel="stylesheet" href="/dds-static/login/assets/sso.min.css">
-    <link rel="stylesheet" media="print" class="contrast-css" href="/dds-static/login/assets/sso-print.min.css">
+    <link rel="stylesheet" href="/roleproviderlogin/assets/sso.min.css">
+    <link rel="stylesheet" media="print" class="contrast-css" href="/roleproviderlogin/assets/sso-print.min.css">
 </head>
 <body class="logged-in theme theme--">
     <div class="page-wrap">
@@ -29,7 +29,7 @@
                     <div class="group relative">
                         <div class="site-title wellcome-trust-title">
                             <a href="https://wellcomelibrary.org">
-                                <img src="/dds-static/login/images/wellcome-logo.png" alt="Wellcome Trust"
+                                <img src="/roleproviderlogin/images/wellcome-logo.png" alt="Wellcome Trust"
                                      width="145" height="58">
                             </a>
                         </div>
@@ -62,7 +62,7 @@
                                     <div>
                                     </div>
                                     <div class="callout group login">
-                                        <form id="fm1" action="/iiif/dlcslogin" method="post">
+                                        <form id="fm1" action="" method="post">
                                             <p class="field">
                                                 <label for="username"><span class="accesskey">U</span>sername or Library card number</label>
                                                 <input id="username" name="directlogin_u" tabindex="1" accesskey="u" type="text" value="@Model.Username" size="25" autocomplete="off">
@@ -133,7 +133,7 @@
                         </div><!-- /.column.two-thirds -->
                         <div class="column text-right wellcome-trust">
                             <a href="https://wellcomelibrary.org/" title="Visit the Wellcome Library">
-                                <img src="/dds-static/login/images/wellcome-logo.png"
+                                <img src="/roleproviderlogin/images/wellcome-logo.png"
                                      alt="Wellcome Library" width="145" height="58">
                             </a>
                         </div><!-- /.column -->
@@ -141,8 +141,8 @@
                 </div><!-- /.wrap -->
             </div><!-- /.section.footer -->
         </footer>
-        <script src="/dds-static/login/assets/jquery.min.js"></script>
-        <script src="/dds-static/login/assets/sso-pack.min.js"></script>
+        <script src="/roleproviderlogin/assets/jquery.min.js"></script>
+        <script src="/roleproviderlogin/assets/sso-pack.min.js"></script>
     </div>
 </body>
 </html>
