Refactor log views to new controller and use links to Kibana

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Index.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Index.cshtml
@@ -22,7 +22,7 @@
 
 <h2>Recently Digitised</h2>
 
-<p>@Html.ActionLink("View Goobi Calls", "GoobiCall", "GoobiCall") | @Html.ActionLink("View Job Processor log", "TailJobProcessor", "Dash")</p>
+<p>@Html.ActionLink("View Goobi Calls", "GoobiCall", "GoobiCall") | @Html.ActionLink("View Job Processor log", "Index", "Log")</p>
 <p>This is a list of <i>new</i> bNumbers. It does not include reprocessed bNumbers.</p>
 
 <div class="row">
