--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Jobs.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Jobs.cshtml
@@ -6,7 +6,7 @@
 
 <h1>Jobs</h1>
 
-<p>@Html.ActionLink("View Job Processor log", "TailJobProcessor", "Dash")</p>
+<p>@Html.ActionLink("View Job Processor log", "Index", "Log")</p>
 
 <div class="row">
     <div class="col-md-3">
