--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Queue.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Queue.cshtml
@@ -5,7 +5,7 @@
 }
 
 <h1>Queue (unstarted jobs)</h1>
-<p>@Html.ActionLink("View Job Processor log", "TailJobProcessor", "Dash")</p>
+<p>@Html.ActionLink("View Job Processor log", "Index", "Log")</p>
 
 <partial name="_JobProcessorLastRan" view-data="ViewData" />
 
