--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/GoobiCall/GoobiCall.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/GoobiCall/GoobiCall.cshtml
@@ -81,7 +81,7 @@ else
         </tr>
         <tr>
             <td>First DLCS Job ID</td>
-            <td>@Html.ActionLink(Model.FirstDlcsJobId.ToString(), "Job", "Dash", new {id = Model.FirstDlcsJobId}, new {})</td>
+            <td>@Html.ActionLink(Model.FirstDlcsJobId.ToString(), "Index", "Job", new {id = Model.FirstDlcsJobId}, new {})</td>
         </tr>
         <tr>
             <td>DLCS Job Count</td>
