Make db calls async

--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Status.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/Status.cshtml
@@ -46,7 +46,7 @@
 <div class="row" style="padding-top: 2em">
     <div class="col-md-12">
         <h2 class="text-danger">Processing problems</h2>
-        @if (Model.ProblemJobs.Jobs.Length > 0)
+        @if (Model.ProblemJobs.Jobs.Count > 0)
         {
             <p><a href="#transmissionProblems">Jump to transmission problems...</a></p>
         }
