--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Shared/_Layout.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Shared/_Layout.cshtml
@@ -34,14 +34,14 @@
                         <a asp-controller="Account" asp-action="UserPage" title="@User.Identity.Name"><span class="glyphicon glyphicon-user"></span></a>
                     </li>
                     <li>@Html.ActionLink("Activity", "RecentActions", "Dash")</li>
-                    <li>@Html.ActionLink("Jobs", "Jobs", "Job")</li>
+                    <li>@Html.ActionLink("Jobs", "Recent", "Job")</li>
                     <li>@Html.ActionLink("Queue", "Queue", "Dash")</li>
                     <li>@Html.ActionLink("Status", "Status", "Dash")</li>
                     <li>@Html.ActionLink("Types", "AssetType", "Dash", null, new { @class = "wip"})</li>
                     <li class="@ViewBag.StopClass">@Html.ActionLink("Stop", "StopStatus", new { controller = "Dash" }, new { @class = ViewBag.StopClass })</li>
                 </ul>
                 <p class="nav navbar-text @ViewBag.HeartbeatClass" title="@heartBeatDisplay">
-                    DLCS Queue: @String.Format("{0}{1}", ViewBag.QueueLevels["incoming"], ViewBag.QueueLevels["priority"] > 0 ? String.Format(" priority:{0}", ViewBag.QueueLevels["priority"]) : String.Empty)
+                    DLCS Queue: @string.Format("{0}{1}", ViewBag.QueueLevels["incoming"], ViewBag.QueueLevels["priority"] > 0 ? string.Format(" priority:{0}", ViewBag.QueueLevels["priority"]) : string.Empty)
                     @if (ViewBag.HeartbeatWarning)
                     {
                         <text> | @heartBeatDisplay | @Html.ActionLink("Log", "Index", "Log")</text>
@@ -71,6 +71,6 @@
     <script src="~/js/typeahead.jquery.js"></script>
     <script src="~/js/dash.js"></script>
     <script src="~/js/openseadragon.min.js"></script>
-    @RenderSection("scripts", required: false)
+    @await RenderSectionAsync("scripts", required: false)
 </body>
 </html>
