--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/UV.cshtml
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/Views/Dash/UV.cshtml
@@ -1,7 +1,7 @@
-﻿@model Wellcome.Dds.AssetDomain.Dashboard.BNumberModel
+﻿@model string
 
 @{
-    ViewBag.Title = "Dash: " + Model.DisplayTitle;
+    ViewBag.Title = "UV: " + Model;
 }
 
 <div class="row" style="margin-top: 1.5em;">
@@ -11,8 +11,6 @@
 </div>
 
 <div style="margin-top: 2em;">
-
-    <div class="uv" data-config="https://wellcomelibrary.org/assets/config/uv-config.json" data-uri=@(Model.ManifestUrl + "?ts=" + DateTime.Now.Ticks) style="width: 100%; height:700px; background-color: #000"></div>
+    <div class="uv" data-config="https://wellcomelibrary.org/assets/config/uv-config.json" data-uri=@(Model + "?ts=" + DateTime.Now.Ticks) style="width: 100%; height:700px; background-color: #000"></div>
     <script type="text/javascript" id="embedUV" src="https://wellcomelibrary.org/spas/uv/top/lib/embed.js"></script>
-
 </div>
