--- a/src/Wellcome.Dds/Wellcome.Dds.Dashboard/wwwroot/css/site.css
+++ b/src/Wellcome.Dds/Wellcome.Dds.Dashboard/wwwroot/css/site.css
@@ -54,3 +54,12 @@ img.iiifpreview {
 .asset-table .text-muted {
     font-style: italic;
 }
+
+td.adjunct {
+    background-color: #fff!important;
+    font-size: small;
+}
+
+td.adjunct span {
+    font-size:larger;
+}
